--- a/src/main/resources/templates/pages/group_detail.html
+++ b/src/main/resources/templates/pages/group_detail.html
@@ -133,6 +133,31 @@
 
     var trgId = geturlparam("trg");
 
+    function removeProject(trpId) {
+      $.ajax({
+        url : "deleteTRP.do",
+        type : "POST",
+        dataType : "json",
+        beforeSend: function (xhr) {
+          xhr.setRequestHeader(header, token);
+        },
+        data: {'trpId': trpId},
+        complete: function () {
+          swal.fire({
+            'title' : '삭제 완료!',
+            'icon'  : 'success'
+          }).then((result) => {
+            if (result.isConfirmed) {
+              location.reload();
+            }
+          });
+        },
+        error: function (thrownError) {
+          console.log(thrownError);
+        }
+      });
+    }
+
     $(document).ready(function() {
 
       $('#reg_project').click(function(e) {
@@ -252,7 +277,41 @@
               return data+"명";
             }
           },
+          {
+            titld : "",
+            data : "trpId",
+            'searchable': false,
+            'className': 'text-right',
+            "render": function (data) {
+              var remove_btn = '<a href="#" class="btn btn-link text-danger btn-just-icon remove" data-trp_id="'+data+'"><i class="material-icons">close</i></a>';
+              return remove_btn;
+
+            }
+          },
       ],
+
+      });
+
+      var table = $('#ProjectDatatable').DataTable();
+
+      table.on('click', '.remove', function() {
+        var trpId = $(this).attr('data-trp_id');
+        console.log(trpId);
+
+        Swal.fire({
+          title: '소그룹을 삭제하시겠습니까?',
+          text: "이 프로젝트에 속한 그룹을 삭제합니다.",
+          icon: 'warning',
+          showCancelButton: true,
+          confirmButtonColor: '#3085d6',
+          cancelButtonColor: '#d33',
+          confirmButtonText: '네!',
+          cancelButtonText: '취소',
+        }).then((result) => {
+          if (result.isConfirmed) {
+              removeProject(trpId);
+          }
+        });
 
       });
 
