--- a/src/main/resources/templates/pages/notice.html
+++ b/src/main/resources/templates/pages/notice.html
@@ -84,8 +84,9 @@
   <script src="https://cdn.jsdelivr.net/gh/jquery-form/form@4.3.0/dist/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
   <script>
 
-    $(document).ready(function() {
+    $('.sidebar').hide();
 
+    $(document).ready(function() {
 
 
     });
